Prevent footnote and citation references changing line spacing

--- a/sass/_theme_rst.sass
+++ b/sass/_theme_rst.sass
@@ -161,7 +161,9 @@
 
   // These are the little citation links [1] that show up within paragraphs.
   .footnote-reference, .citation-reference
-    vertical-align: super
+    vertical-align: baseline
+    position: relative
+    top: -0.4em
     font-size: 90%
 
   // Tables! Sphinx LOVES TABLES. Most of wyrm assumes you're only going to use a table as a table
